made modal max height less for mobile devices to prevent native action bars from covering the bottom of the modal

--- a/src/index.scss
+++ b/src/index.scss
@@ -44,6 +44,12 @@
 }
 
 @media (max-width: 450px) {
+  .uafrica-modal {
+    .content {
+      max-height: calc(100vh - 180px) !important;
+      max-width: calc(98vw) !important;
+    }
+  }
   .save-panel {
     left: 0px;
     width: 100%;
